tests/e2e/service_call_require_command.error
Error: syntax error in story at line 1, column 6

1|    echo message:"hello"
           ^^^^^^^^^^^^^^^

E0052: Service calls require a command.
